fix bug #34902 (mysqli::character_set_name() - undefined method)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@198680 c90b9560-bf6c-de11-be94-00142212c4b1